add message_bus service dependency (#25)
