# api/user-service/openapi.yaml
@@ -74,7 +74,27 @@ paths:
         "500":
           description: Internal server error
           $ref: "#/components/responses/BadResponse"
-
+  /event/local_storage/{serial}:
+    delete:
+      summary: Delete an event
+      description: Delete an event
+      operationId: deleteEventBySerial
+      tags:
+        - event
+      parameters:
+        - $ref: "#/components/parameters/serial"
+      responses:
+        "200":
+          description: Event deleted
+          $ref: "#/components/responses/OKResponse"
+        "401":
+          description: Event not found
+        "404":
+          description: Event not found
+          $ref: "#/components/responses/ResponseNotFound"
+        "500":
+          $ref: "#/components/responses/BadResponse"
+          description: Internal server error
 components:
   securitySchemes:
     access_token:
@@ -82,6 +102,14 @@ components:
       in: header
       name: Authorization
   parameters:
+    serial:
+      name: serial
+      in: path
+      description: Serial of the local storage
+      required: true
+      schema:
+        type: string
+        example: "1234567890"
     event_uuid:
       name: event_uuid
       in: path
@@ -92,6 +120,13 @@ components:
         format: uuid
         example: 123e4567-e89b-12d3-a456-426655440000
   responses:
+    OKResponse:
+      description: OK
+      content:
+        application/json:
+          schema:
+            type: object
+            $ref: "#/components/schemas/BaseResponse"
     DeleteEventOK:
       description: Event deleted
       content:
